Revert the constructor-cell arc: it regressed the launcher, bisected and proven
Reverts 7f33d5f, 09c562b and 7d4309c. The resulting source tree is byte-identical
to 6849291, which is proven GOOD on the QEMU launcher (Test run finished, batch
139, +2473blob -- the same closure the Pi validation recorded).

WHAT BROKE. The launcher, on hardware, went from `Test run finished` / [2 tests
successful] / exit 0 at batch 139 to a NullPointerException at batch 21 --
`at or before arg[3] '--disable-banner'` plus picocli's usage dump and exit
0xFFFFFFFF. That is byte-for-byte the symptom CLAUDE.md records fb799a9 as having
fixed, down to the argument index.

BISECTED ON QEMU, which reproduces the Pi closure exactly:

  895cd09  GOOD  control, batch 139, +2473blob
  6849291  GOOD  + all seven instrument commits + the +1 Unsafe member
  7f33d5f  BAD   + constructor cells          <- FIRST BAD, reproduces the Pi NPE
  7d4309c  BAD   + 18 Unsafe + the cap report

The instruments are exonerated, which also retires the worry that an
instrument-only change moved the closure.

THE MECHANISM, AND MY COMMIT MESSAGE ASSERTED THE OPPOSITE OF THE TRUTH. It said
"a class that loads normally already compiles its <init> at load, so tier 1 finds
the registered body first and the new cell is only consulted when tier 1 misses".
Both halves are false, and the code says so plainly:

  - `MetalSymbols.call` asks `Loader.lazyStaticCell` BEFORE `resolveCallBuf`, so a
    cell does not sit behind the registry, it SHADOWS it.
  - `compileClass` skips any method `phaseACelled` answers for -- "never sized,
    emitted or registered here". Arming constructor cells therefore MOVED every
    constructor off the deferral-stub route and out of the registry entirely: no
    buffer, no registry entry, no vtable slot. Not an additive fallback at all.

That changed when every constructor body is compiled and when `ensureClinit` runs
for its class, which is the "linking must not run an initializer" hazard fb799a9
